5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/3960/executions/1735_2517.log
== TEST (2019-05-20 17:34:51) 
-- CODE:
h0 = float(input("Insira a altura inicial: "))
h = h0 - (0.5 * 9.8*(t**2))
t = 0

while(h >= 0):
	print("t =",t)
	print("h =",round(h,2))
	h = h0 - (0.5 * 9.8*(t**2))
	t = t + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    h = h0 - (0.5 * 9.8*(t**2))
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:35:19) 
-- CODE:
h0 = float(input("Insira a altura inicial: "))
t = 0
h = h0 - (0.5 * 9.8*(t**2))

while(h >= 0):
	print("t =",t)
	print("h =",round(h,2))
	h = h0 - (0.5 * 9.8*(t**2))
	t = t + 1
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 36.0
t = 2
h = 31.1
t = 3
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:36:45) 
-- CODE:
h0 = float(input("Insira a altura inicial: "))
t = 0
h = h0

while(h >= 0):
	print("t =",t)
	print("h =",round(h,2))
	h = h0 - (0.5 * 9.8*(t**2))
	t = t + 1
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 36.0
t = 2
h = 31.1
t = 3
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:38:22) 
-- CODE:
h0 = float(input("Insira a altura inicial: "))
t = 0
h = h0 - (0.5 * 9.8*(t**2))

while(h > 0):
	print("t =",t)
	print("h =",round(h,2))
	h = h0 - (0.5 * 9.8*(t**2))
	t = t + 1
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 36.0
t = 2
h = 31.1
t = 3
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:39:12) 
-- CODE:
h0 = float(input("Insira a altura inicial: "))
t = 0
h = h0 - (0.5 * 9.8*(t**2))

while(h >= 0):
	print("t =",t)
	print("h =",round(h,2))
	t = t + 1
	h = h0 - (0.5 * 9.8*(t**2))
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-20 17:39:39) 
-- CODE:
h0 = float(input("Insira a altura inicial: "))
t = 0
h = h0 - (0.5 * 9.8*(t**2))

while(h >= 0):
	print("t =",t)
	print("h =",round(h,2))
	t = t + 1
	h = h0 - (0.5 * 9.8*(t**2))
-- EXECUTION TIME:
0.137898
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 0
h = 11.5
t = 1
h = 6.6
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:39:43) 
-- CODE:
h0 = float(input("Insira a altura inicial: "))
t = 0
h = h0 - (0.5 * 9.8*(t**2))

while(h >= 0):
	print("t =",t)
	print("h =",round(h,2))
	t = t + 1
	h = h0 - (0.5 * 9.8*(t**2))
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:40:41) 
-- CODE:
h0 = float(input("Insira a altura inicial: "))
t = 0
h = h0 - (0.5 * 9.8*(t**2))

while(h >= 0):
	print("t =",t)
	print("h =",round(h,2))
	t = t + 1
	h = h0 - (0.5 * 9.8*(t**2))
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-20 17:40:54) 
-- CODE:
h0 = float(input("Insira a altura inicial: "))
t = 0
h = h0 - (0.5 * 9.8*(t**2))

while(h >= 0):
	print("t =",t)
	print("h =",round(h,2))
	t = t + 1
	h = h0 - (0.5 * 9.8*(t**2))
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
